  - Added path MTU discovery for ingress traffic originated outside of the
    cluster.
  - Introduced a new "label" field for "allow" and "allow-related" ACLs
    which helps in debugging/backtracking the ACL which allowed a particular
    connection.
  - Allow static routes without nexthops.
  - Enabled logical dp groups as a default.  CMS should disable it if not
    desired.

OVN v21.06.0 - 18 Jun 2021
-------------------------
  - ovn-northd-ddlog: New implementation of northd, based on DDlog.  This
    implementation is incremental, meaning that it only recalculates what is
    needed for the southbound database when northbound changes occur.  It is
    expected to scale better than the C implementation, for large deployments.
    (This may take testing and tuning to be effective.)  This version of OVN
    requires DDLog 0.38.
  - Introduce ovn-controller incremental processing engine statistics
  - Introduced parallel processing in ovn-northd with the NB_Global config option
    'use_parallel_build' to enable it.  It is disabled by default.
  - Support vlan-passthru mode for tag=0 localnet ports.
  - Support custom 802.11ad EthType for localnet ports.
  - Add a new NB Global option - use_ct_inv_match with the default value of
    true. If this is set to false, then the logical field - "ct.inv" will not
    be used in the logical flow matches.  CMS can consider setting this to
    false, if they want to use smart NICs which don't support offloading
    datapath flows with this field used.
  - Introduce a new "allow-stateless" ACL verb to always bypass connection
    tracking. The existing "allow" verb behavior is left intact.
  - Added support in native DNS to respond to PTR request types.
  - ovn-nbctl daemon mode is no longer considered experimental.
  - Utilities:
    * ovn-nbctl daemon mode is no longer considered experimental.
    * ovn-sbctl now also supports daemon mode.
  - Added support in native DNS to respond to PTR request types.